--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -166,8 +166,8 @@ services:
   # RAG FastAPI
   rag-api:
     build:
-      context: ./docker
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/Dockerfile
     container_name: rag-api
     restart: unless-stopped
     environment:
