--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -188,6 +188,6 @@ services:
         - PYTHONUNBUFFERED=1
       ports:
         - "7860:7860"  # Gradio по умолчанию слушает 7860
-      command: python ui/app.py  # 👈 запуск Gradio-приложения
+      command: python -m ui.app  # 👈 запуск Gradio-приложения
       depends_on:
         - rag-api
