--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -172,10 +172,11 @@ services:
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
+      - LOG_LEVEL=DEBUG
     ports:
       - "8008:8008"
     command: >
-      uvicorn api.app:app --host 0.0.0.0 --port 8008
+      uvicorn api.app:app --host 0.0.0.0 --port 8008 --log-level debug
 
   # Gradio UI
   rag-gradio:
