--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -77,6 +77,7 @@ services:
       --served-model-name bge-reranker-v2-m3
     environment:
       - CUDA_VISIBLE_DEVICES=1
+      - VLLM_USE_TRITON_FLASH_ATTN=0
     ports:
       - "8002:8002"
     volumes:
