fix docker milvus

--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -135,6 +135,11 @@ services:
       - ETCD_QUOTA_BACKEND_BYTES=4294967296
       - ETCD_SNAPSHOT_COUNT=50000
     command: etcd -advertise-client-urls=http://etcd:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    healthcheck:
+      test: [ "CMD", "etcdctl", "endpoint", "health" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
     ports:
       - "2379:2379"
     volumes:
@@ -146,7 +151,7 @@ services:
     environment:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
-    command: minio server /data --console-address ":9001"
+    command: minio server /minio_data --console-address ":9001"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:9001/minio/health/live" ]
       interval: 30s
@@ -156,7 +161,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - /storage/minio:/data
+      - /storage/minio:/minio_data
 
   # === Redis (кэш + история чата) ===
   redis:
