--- a/docker/llama_cpp/Dockerfile
+++ b/docker/llama_cpp/Dockerfile
@@ -9,22 +9,25 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
-# Клонируем llama.cpp с поддержкой ROCm
+# Клонируем llama.cpp
 WORKDIR /app
 RUN git clone https://github.com/ggerganov/llama.cpp.git
 WORKDIR /app/llama.cpp
 
-# Собираем с поддержкой ROCm и сервером
-RUN make clean && make -j$(nproc) LLAMA_HIPBLAS=1 LLAMA_CUDA=0
+# Создаём build-директорию
+RUN mkdir build && cd build && \
+    cmake .. \
+      -DLLAMA_HIPBLAS=ON \
+      -DLLAMA_CUDA=OFF \
+      -DLLAMA_ACCELERATE=OFF \
+      -DCMAKE_BUILD_TYPE=Release && \
+    make -j$(nproc)
 
-# Устанавливаем Python-биндинги (опционально)
-RUN pip install -r requirements.txt
-
-# Копируем модель (будет монтироваться извне, но можно и так)
-# COPY ./qwen3-8b-q4_k_m.gguf /models/model.gguf
+# Устанавливаем Python-биндинги (опционально, для будущего использования)
+# RUN pip install -r requirements.txt
 
 # Экспонируем порт
 EXPOSE 8001
 
 # Запуск сервера
-CMD ["./server", "-m", "/models/model.gguf", "--port", "8001", "--ctx-size", "4096", "--n-gpu-layers", "40"]
+CMD ["./build/bin/server", "-m", "/models/model.gguf", "--port", "8001", "--ctx-size", "4096", "--n-gpu-layers", "40"]
