--- a/docker-compose-frida.yaml
+++ b/docker-compose-frida.yaml
@@ -207,6 +207,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - LOG_LEVEL=DEBUG
+      - MAX_HISTORY_MESSAGES=1
     ports:
       - "8008:8008"
     command: >
